# django-models

./: README.md  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: admin.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: base.html  snacks_detail.html  snacks_list.html
