[tool.poetry]
name = "django_models"
version = "0.1.0"
description = ""
authors = ["AbdullahELian1 <abodelian28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
Django = "^3.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
